--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   rxdart: ^0.27.7
   image_picker: ^1.0.7
   cached_network_image: ^3.3.1
+  freezed_annotation: ^2.4.1
+  http_parser: ^4.0.2
+  isar: ^3.1.0+1
+  path_provider: ^2.1.2
+  isar_flutter_libs: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +62,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.8
   auto_route_generator: ^7.3.2
+  freezed: ^2.4.6
+  json_serializable: ^6.7.1
+  isar_generator: ^3.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
