--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   dio: ^5.4.0
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
-  auto_route: ^7.8.4
+  auto_route: ^7.9.0
   get_it: ^7.6.6
   connectivity_plus: ^5.0.2
   rxdart: ^0.27.7
@@ -65,6 +65,7 @@ dev_dependencies:
   freezed: ^2.4.6
   json_serializable: ^6.7.1
   isar_generator: ^3.1.0+1
+  mocktail: ^1.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
