--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   equatable: ^2.0.5
   auto_route: ^7.9.0
   get_it: ^7.6.6
+  internet_connection_checker: ^1.0.0+1
   connectivity_plus: ^5.0.2
   rxdart: ^0.27.7
   image_picker: ^1.0.7
@@ -93,7 +94,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: 
+  #   - family:
   #     fonts:
   #       - asset: assets/fonts/.ttf
   #
