--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
   isar_generator: ^3.1.0+1
   mocktail: ^1.0.3
+  http_mock_adapter: ^0.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
