--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.1.2
   isar_flutter_libs: ^3.1.0+1
   flutter_sliding_drawer: ^2.0.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
