--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dev_dependencies:
   isar_generator: ^3.1.0+1
   mocktail: ^1.0.3
   http_mock_adapter: ^0.6.1
+  integration_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
