--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
   isar_generator: ^3.1.0+1
   mocktail: ^1.0.3
-  http_mock_adapter: ^0.6.1
+  bloc_test: ^9.1.6
   integration_test:
     sdk: flutter
 
