refactor: adapted OOP approach, updated the project structure, utilized dependency injections.

--- a/NodeJS/tsconfig.json
+++ b/NodeJS/tsconfig.json
@@ -4,14 +4,16 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "allowJs": true
+    "allowJs": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*", "server.ts", "socket.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
