--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -6,15 +6,16 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "express-async-handler": "^1.2.0",
-    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.5"
+    "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.7.5",
+    "tsyringe": "^4.10.0",
+    "zod": "^4.2.0"
   },
   "scripts": {
-    "start": "tsx --watch --env-file=.env server.ts"
+    "start": "tsx --watch --env-file=.env src/server.ts"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
