--- a/todo-app-dart-frog/.env
+++ b/todo-app-dart-frog/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/dart_frog_auth
+MONGODB_URI=mongodb://localhost:27017/dart_frog_todo
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_ACCESS_EXPIRY=15m
 JWT_REFRESH_EXPIRY=7d
